<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="-2dp" />

    <ja.burhanrashid52.photoeditor.PhotoEditorView
        android:id="@+id/photoEditorView"
        android:layout_width="411dp"
        android:layout_height="667dp"
        app:layout_constraintBottom_toTopOf="@+id/rvConstraintTools"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224"
        app:photo_src="@drawable/blank_image">

    </ja.burhanrashid52.photoeditor.PhotoEditorView>

    <ImageView
        android:id="@+id/imgRedo"
        android:layout_width="@dimen/top_tool_icon_width"
        android:layout_height="wrap_content"
        android:background="@color/semi_black_transparent"
        android:padding="8dp"
        android:src="@drawable/ic_redo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <ImageView
        android:id="@+id/imgUndo"
        android:layout_width="@dimen/top_tool_icon_width"
        android:layout_height="wrap_content"
        android:background="@color/semi_black_transparent"
        android:padding="8dp"
        android:src="@drawable/ic_undo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgRedo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <ImageView
        android:id="@+id/imgGallery"
        android:layout_width="@dimen/top_tool_icon_width"
        android:layout_height="wrap_content"
        android:background="@color/semi_black_transparent"
        android:padding="2dp"
        android:src="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <ImageView
        android:id="@+id/imgCamera"
        android:layout_width="@dimen/top_tool_icon_width"
        android:layout_height="wrap_content"
        android:background="@color/semi_black_transparent"
        android:padding="2dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvConstraintTools"
        android:layout_width="363dp"
        android:layout_height="64dp"
        android:background="#C6333333"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/row_editing_tools" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFilterView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#C6333333"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/rvConstraintTools"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rvConstraintTools"
        tools:listitem="@layout/row_filter_view" />

    <ImageView
        android:id="@+id/imgShare"
        android:layout_width="@dimen/top_tool_icon_width"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:padding="0dp"
        android:src="@drawable/ic_send"
        app:layout_constraintBottom_toTopOf="@+id/rvConstraintTools"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />

    <ImageView
        android:id="@+id/imgSave"
        android:layout_width="40dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="#00000000"
        android:padding="0dp"
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toTopOf="@+id/rvConstraintTools"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="0dp"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/txtCurrentTool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="cursive"
        app:layout_constraintEnd_toStartOf="@+id/imgShare"
        app:layout_constraintStart_toEndOf="@+id/imgSave" />

</androidx.constraintlayout.widget.ConstraintLayout>